Modify we offer and gallery section

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 	<link rel="shortcut icon" href="images/favicon.png" type="image/png">
 	<!-- Bootstrap Core CSS -->
 	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<!-- Fancy Box Core CSS -->
+	<link rel="stylesheet" href="css/fancybox.min.css">
 	<!-- Owl Carousel Core CSS -->
 	<link rel="stylesheet" href="css/owl.carousel.min.css">
 	<link rel="stylesheet" href="css/owl.theme.min.css">
@@ -335,7 +337,7 @@
 				      	</div>
     				</div>
 
-    				<!-- Our Program -->
+    				<!-- Our Gallery -->
 					<div class="gallery my-5">
 				      	<div class="section-header">
 					        <h5>Our Gallery</h5>
@@ -349,18 +351,28 @@
 						            <!-- Column 1 -->
 						            <div class="col-lg-6 col-md-6 col-sm-6 col-12">
 						              <div class="gallery-item">
-						                <a href="">
-					          				<img class="img-fluid" src="http://placehold.jp/535x300.png">
-					          			</a>
+						                <div class="gal-photo">
+						                	<a href="">
+						          				<img class="img-fluid" src="http://placehold.jp/535x300.png">
+						          			</a>
+						                </div>
+						                <div class="gal-icon">
+						                	<a href="http://placehold.jp/535x300.png" data-fancybox><i class="icofont">link</i></a>
+						                </div>
 						              </div>
 						            </div>
 
 						            <!-- Column 2 -->
 						           	<div class="col-lg-6 col-md-6 col-sm-6 col-12">
 						              <div class="gallery-item">
-						                <a href="">
-					          				<img class="img-fluid" src="http://placehold.jp/ddd/666/535x300.png">
-					          			</a>
+						                <div class="gal-photo">
+						                	<a href="">
+						          				<img class="img-fluid" src="http://placehold.jp/ddd/666/535x300.png">
+						          			</a>
+						                </div>
+						                <div class="gal-icon">
+						                	<a href="http://placehold.jp/ddd/666/535x300.png" data-fancybox><i class="icofont">link</i></a>
+						                </div>
 						              </div>
 						            </div>
 				          		</div>
@@ -368,18 +380,28 @@
 						            <!-- Column 1 -->
 						            <div class="col-lg-6 col-md-6 col-sm-6 col-12">
 						              <div class="gallery-item">
-						                <a href="">
-					          				<img class="img-fluid" src="http://placehold.jp/ddd/666/535x300.png">
-					          			</a>
+						                <div class="gal-photo">
+						                	<a href="">
+						          				<img class="img-fluid" src="http://placehold.jp/ddd/666/535x300.png">
+						          			</a>
+						                </div>
+						                <div class="gal-icon">
+						                	<a href="http://placehold.jp/ddd/666/535x300.png" data-fancybox><i class="icofont">link</i></a>
+						                </div>
 						              </div>
 						            </div>
 
 						            <!-- Column 2 -->
 						           	<div class="col-lg-6 col-md-6 col-sm-6 col-12">
 						              <div class="gallery-item">
-						                <a href="">
-					          				<img class="img-fluid" src="http://placehold.jp/535x300.png">
-					          			</a>
+						                <div class="gal-photo">
+						                	<a href="">
+						          				<img class="img-fluid" src="http://placehold.jp/535x300.png">
+						          			</a>
+						                </div>
+						                <div class="gal-icon">
+						                	<a href="http://placehold.jp/535x300.png" data-fancybox><i class="icofont">link</i></a>
+						                </div>
 						              </div>
 						            </div>
 				          		</div>
@@ -483,6 +505,8 @@
 	<script type="text/javascript" src="js/jquery.min.js"></script>
 	<!-- Bootstrap Core JS -->
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
+	<!-- Fancybox Core JS -->
+	<script type="text/javascript" src="js/fancybox.min.js"></script>
 	<!-- Owl Carousel Core JS -->
 	<script type="text/javascript" src="js/owl.carousel.min.js"></script>
 	<!-- Developer Custom JS -->
