--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<!-- Bootstrap Core CSS -->
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<!-- Fancy Box Core CSS -->
-	<link rel="stylesheet" href="css/fancybox.min.css">
+	<link rel="stylesheet" href="css/fancybox.css">
 	<!-- Owl Carousel Core CSS -->
 	<link rel="stylesheet" href="css/owl.carousel.min.css">
 	<link rel="stylesheet" href="css/owl.theme.min.css">
@@ -28,7 +28,7 @@
 		<div class="section-content">
 			<div class="logo-social pt-4 pb-4">
 				<div class="row">
-				    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+				    <div class="col-lg-4 col-md-4 col-sm-4 col">
 				      	<div class="header-left-icon mt-5">
 					      	<ul>
 					      		<li>
@@ -46,7 +46,7 @@
 						</div>
 				    </div>
 				  
-				    <div class="col-lg-4 order-lg-1 col-md-4 order-md-1 col-sm-4 order-sm-1 col-xs-12 order-1">
+				    <div class="col-lg-4 order-lg-1 col-md-4 order-md-1 col-sm-4 order-sm-1 col order-1">
 				      	<div class="header-right-icon mt-5 text-right">
 				      		<ul>
 					      		<li>
@@ -368,7 +368,7 @@
 						          			</a>
 						                </div>
 						                <div class="gal-icon">
-						                	<a href="images/gallery-1.jpg" data-fancybox="images"><i class="icofont">link</i></a>
+						                	<a href="images/gallery-1.jpg" data-fancybox="images" data-caption="enter your caption"><i class="icofont">link</i></a>
 						                </div>
 						              </div>
 						            </div>
@@ -382,7 +382,7 @@
 						          			</a>
 						                </div>
 						                <div class="gal-icon">
-						                	<a href="images/gallery-2.jpg" data-fancybox="images"><i class="icofont">link</i></a>
+						                	<a href="images/gallery-2.jpg" data-fancybox="images" data-caption="enter your caption"><i class="icofont">link</i></a>
 						                </div>
 						              </div>
 						            </div>
@@ -397,7 +397,7 @@
 						          			</a>
 						                </div>
 						                <div class="gal-icon">
-						                	<a href="http://placehold.jp/ddd/666/535x300.png" data-fancybox="images"><i class="icofont">link</i></a>
+						                	<a href="http://placehold.jp/ddd/666/535x300.png" data-fancybox="images" data-caption="enter your caption"><i class="icofont">link</i></a>
 						                </div>
 						              </div>
 						            </div>
@@ -411,7 +411,7 @@
 						          			</a>
 						                </div>
 						                <div class="gal-icon">
-						                	<a href="http://placehold.jp/535x300.png" data-fancybox="images"><i class="icofont">link</i></a>
+						                	<a href="http://placehold.jp/535x300.png" data-fancybox="images" data-caption="enter your caption"><i class="icofont">link</i></a>
 						                </div>
 						              </div>
 						            </div>
